<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="ru.kosteloff.notes.fragments.StartFragment"
        android:label="@string/my_notes"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_startFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="ru.kosteloff.notes.fragments.AddNoteFragment"
        android:label="@string/new_note"
        tools:layout="@layout/fragment_add_note" >
        <action
            android:id="@+id/action_addNoteFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="ru.kosteloff.notes.fragments.DetailFragment"
        android:label="@string/my_note"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_startFragment"
            app:destination="@id/startFragment" />
        <argument
            android:name="currentItem"
            app:argType="ru.kosteloff.notes.tablemodel.NoteModel" />
    </fragment>
</navigation>